fix: watermark in dark mode

--- a/_app/assets/themes/alchemy/_scss/_extra.scss
+++ b/_app/assets/themes/alchemy/_scss/_extra.scss
@@ -15,7 +15,7 @@
 .watermark {
     font-family: bickham-script-pro-3;
     font-feature-settings: "swsh";
-    opacity: .02;
+    opacity: .03;
     position: absolute;
     user-select: none;
     top: 0;
